Added orders function

--- a/templates/marketplace/view_cart.html
+++ b/templates/marketplace/view_cart.html
@@ -42,7 +42,7 @@ View Cart
                             {{ grand_total }}
                         </td>
                         <td class="text-center">
-                            <a href="#" class="btn btn-success px-3 py-1 mx-1">Checkout</a>
+                            <a href="{% url 'checkout' %}" class="btn btn-success px-3 py-1 mx-1">Checkout</a>
                         </td>
                     </tr>
             {% else %}
