--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
                             <a class="nav-link" href="{% url 'view_cart' %}">View Cart</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{% url 'list_orders' %}">Order History</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                         </li>
                     {% else %}
