--- a/templates/marketplace/product.html
+++ b/templates/marketplace/product.html
@@ -18,11 +18,15 @@
             <p>Vendor: <b>{{ product.seller.name }}</b></p>
         </div>
         <div class="col-5">
-            <form class="form" method="post">
-                {% csrf_token %}
-                {{ form | crispy }}
-                <button type="submit" class="btn btn-info">Add to cart</button>
-            </form>
+            {% if product.quantity == 0 %}
+                <p class="text-danger fw-bold">Item out of stock!</p>
+            {% else %}
+                <form class="form" method="post">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+                    <button type="submit" class="btn btn-info">Add to cart</button>
+                </form>
+            {% endif %}
         </div>
         <div class="col-1"></div>
     </div>
